Close button no longer overlaps text

--- a/private/styles/main.scss
+++ b/private/styles/main.scss
@@ -302,6 +302,10 @@ img {
   margin-bottom: $padding;
   text-align: left;
 
+  p:first-child {
+    margin-right: 1em;
+  }
+
   div {
     p:first-child {
       margin: .5em 0 0 0;
@@ -315,7 +319,8 @@ img {
   top: 0;
   padding: 0;
   margin: 0;
-  line-height: .9em;
+  line-height: .8em;
+  font-size: .8em;
   text-shadow: none;
 }
 
